--- a/cercifit_application.html
+++ b/cercifit_application.html
@@ -34,76 +34,31 @@
         </header>
 
         <div class="option-container"> <!--This Is A Title Container-->
-            <h1>Mod Application</h1> <!--This Is A Title-->
+            <h1>Certification Application</h1> <!--This Is A Title-->
         </div>
         
         <div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q1 - What Is Your Discord Username And Tag?</h3> <!--This Is A Question Title-->
+            <h3>Q1 - Why should we pick you?</h3> <!--This Is A Question Title-->
         </div>
         <div class="option-container" style="height: 3rem; padding-top: 0rem; "> <!--This Is A Question Container-->
             <input type="text" id="answer_box" name="ut" placeholder="Username#0001" style="margin-top:0.8rem;">
         </div>
 	
 	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q2 - Why Do You Want To Be A Moderator (Why Should We Pick You)?</h3> <!--This Is A Question Title-->
+            <h3>Q2 - Whats your discord Tag/User?)?</h3> <!--This Is A Question Title-->
         </div>
         <div class="option-container" style="height: 20rem; padding-top: 0rem; "> <!--This Is A Question Container-->
             <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
         </div>
 
 	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q3 - What Is Your Rank On RoBot</h3> <!--This Is A Question Title-->
+            <h3>Q3 - Any Aditinal Info</h3> <!--This Is A Question Title-->
         </div>
         <div class="option-container" style="height: 3rem; padding-top: 0rem; "> <!--This Is A Question Container-->
             <input type="text" id="answer_box" name="ut" placeholder="Do `>rank` in bot-commands inside the server to get your rank!" style="margin-top:0.8rem;">
         </div>
 
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q4 - What Are Your Strengths And Weaknesses?</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 20rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q5 - What And How Many Infractions Do You Have?</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 20rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q6 - What  Would You Do If Someone Was Excessively Swearing?</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 10rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q7 - What  Would You Do If Someone Was Chat Flooding</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 10rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q8 - What Would You Do If Someone Was Sending NSFW?</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 10rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-	<div class="option-header"> <!--This Is A Question Title Container-->
-            <h3>Q9 - Is There Any Other Info You Want To Add?</h3> <!--This Is A Question Title-->
-        </div>
-        <div class="option-container" style="height: 10rem; padding-top: 0rem; "> <!--This Is A Question Container-->
-            <textarea id="answer_box" rows="20" cols="200" placeholder="Enter Your Answer Here!"></textarea>
-        </div>
-
-
-
-
-       
+	
 
         <div class="footer-container">
             <div class="footer">
